--- a/docs/contributing.mdx
+++ b/docs/contributing.mdx
@@ -26,9 +26,10 @@ We welcome pull requests. Before submitting one, please:
 
 ### 🛠 Code PR Best Practices:
 
-1. **Follow Existing Code Convention:** Ensure your code aligns with the existing coding standards and practices of the project.
-2. **Avoid Additional External Dependencies:** Do not include additional external dependencies without prior discussion.
-3. **Framework Agnostic Approach:** We aim to stay framework agnostic. Implement functionalities on our own whenever possible rather than relying on external frameworks or libraries. If you have doubts or suggestions regarding this approach, feel free to discuss it.
+1. **Atomic PRs:** Make sure your PRs are small, focused, and deal with a single objective or task. This helps in easier code review and limits the chances of introducing unrelated issues. If the scope of changes grows too large, consider breaking them into smaller, logically independent PRs.
+2. **Follow Existing Code Convention:** Ensure your code aligns with the existing coding standards and practices of the project.
+3. **Avoid Additional External Dependencies:** Do not include additional external dependencies without prior discussion.
+4. **Framework Agnostic Approach:** We aim to stay framework agnostic. Implement functionalities on our own whenever possible rather than relying on external frameworks or libraries. If you have doubts or suggestions regarding this approach, feel free to discuss it.
 
 Thank you for contributing! 🚀
 
