Doc: suggested changes applied
Changes applied.

The example of tools and more image will be updated tomorrow.

Update index.mdx

--- a/docs/features/plugin/tools/index.mdx
+++ b/docs/features/plugin/tools/index.mdx
@@ -33,6 +33,17 @@ Imagine you’re chatting with an LLM and want it to give you the current weathe
 2. **Image Generation** 🖼️: Create images based on user prompts.
 3. **Voice Synthesis** 🎙️: Integrate with an API like ElevenLabs to generate audio.
 
+## 📥 Installing Tools
+
+You can install Tools from the community in two ways:
+
+1.  **Direct Import via Open WebUI URL**
+   - Go to [https://openwebui.com/tools/](https://openwebui.com/tools/) 🌐, select the Tool you want, and enter the IP of your Open WebUI instance. Click “Import to WebUI” to automatically open your instance and begin the import.
+
+2. **Manual Download and Import**
+   - Visit the community site: [https://openwebui.com/tools/](https://openwebui.com/tools/) 🌐
+   - Select a Tool, download it as a JSON export 📄, and then import it in Open WebUI by going to Workspace => Tools and clicking “Import Tools.”
+
 ## 🔑 How to Enable and Use Tools
 
 Once installed, **Tools** can be assigned to any LLM supporting function calling:
@@ -43,17 +54,6 @@ Once installed, **Tools** can be assigned to any LLM supporting function calling
 
 Enabling a Tool does not mean it’s forced to be used; it simply makes it available for use in that chat. To simplify access, the **AutoTool Filter** on the community site allows automatic Tool selection, but you still need to manually enable Tools per model.
 
-## 📥 Installing Tools
-
-You can install Tools from the community in two ways:
-
-1. **Manual Download and Import**
-   - Visit the community site: [https://openwebui.com/tools/](https://openwebui.com/tools/) 🌐
-   - Select a Tool, download it as a JSON export 📄, and then import it in Open WebUI by going to Workspace => Tools and clicking “Import Tools.”
-
-2. **Direct Import via Open WebUI URL**
-   - Go to [https://openwebui.com/tools/](https://openwebui.com/tools/) 🌐, select the Tool you want, and enter the IP of your Open WebUI instance. Click “Import to WebUI” to automatically open your instance and begin the import.
-
 ### ⚠️ Important: Only Import Trusted Tools
 Avoid importing Tools from unknown sources, as they may introduce risks.
 
@@ -61,7 +61,7 @@ Avoid importing Tools from unknown sources, as they may introduce risks.
 
 ## 📝 Starting with Code
 
-If you’re ready to dive into writing code, start with reading this [document](../start_coding.md).
+If you’re ready to dive into writing code, start with reading this [document](../getting_started.md).
 
 
 
