--- a/docs/features/plugin/tools/index.mdx
+++ b/docs/features/plugin/tools/index.mdx
@@ -54,6 +54,8 @@ Once installed, **Tools** can be assigned to any LLM supporting function calling
 
 Enabling a Tool does not mean it’s forced to be used; it simply makes it available for use in that chat. To simplify access, the **AutoTool Filter** on the community site allows automatic Tool selection, but you still need to manually enable Tools per model.
 
+Admins have access to all tools at all times; users need tools assigned per model in the workspace.
+
 ### ⚠️ Important: Only Import Trusted Tools
 Avoid importing Tools from unknown sources, as they may introduce risks.
 
